Добавлены стили и страницы регистрации и главной для сайта.

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -2,7 +2,31 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="NewsBlock_Container">
+    <ul class="NewsBlock">
+        <li class="NewsBlock_Item">
+            <span class="NewsBlock_Item__Title">Name</span>
+            <span class="NewsBlock_Item_Content">Content</span>
+        </li>
+        <li class="NewsBlock_Item">
+            <span class="NewsBlock_Item__Title">Name</span>
+            <span class="NewsBlock_Item_Content">Content</span>
+        </li>
+        <li class="NewsBlock_Item">
+            <span class="NewsBlock_Item__Title">Name</span>
+            <span class="NewsBlock_Item_Content">Content</span>
+        </li>
+        <li class="NewsBlock_Item">
+            <span class="NewsBlock_Item__Title">Name</span>
+            <span class="NewsBlock_Item_Content">Content</span>
+        </li>
+        <li class="NewsBlock_Item">
+            <span class="NewsBlock_Item__Title">Name</span>
+            <span class="NewsBlock_Item_Content">Content</span>
+        </li>
+        <li class="NewsBlock_Item">
+            <span class="NewsBlock_Item__Title">Name</span>
+            <span class="NewsBlock_Item_Content">Content</span>
+        </li>
+    </ul>
 </div>
