Добавлены модель представление для добавления новостей, а так-же стиль для неё. Внесены некоторые правки в стиль регистрации для универсализации его.

--- a/WebApplication1/Views/User/Registration.cshtml
+++ b/WebApplication1/Views/User/Registration.cshtml
@@ -11,12 +11,12 @@
     </span>
 </div>
 <div class="FormContainer">
-    <form action="post" class="RegistredForm">
-        <div class="RegistredForm_ButtonContainer">
+    <form action="post" class="AddNewObjectForm">
+        <div class="AddNewObjectForm_ButtonContainer">
             <span class="RegistredForm_ButtonContainer__PreInput"> Ваше имя: </span>
             <input type="text" class="RegistredForm_ButtonContainer__Input" required>
         </div>
-        <div class="RegistredForm_ButtonContainer">
+        <div class="AddNewObjectForm_ButtonContainer">
             <span class="RegistredForm_ButtonContainer__PreInput"> Ваш Email: </span>
             <input type="Email" class="RegistredForm_ButtonContainer__Input" required>
         </div>
