--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -13,10 +13,10 @@
             </div>
             <nav class="NavigationMenu">
                 <div class="NavigationMenu_ButtonContainer">
-                    <a href="#" class="NavigationMenu_Button"> Регистрация </a>
+                    <a href="~/User/Registration" class="NavigationMenu_Button"> Регистрация </a>
                 </div>
                 <div class="NavigationMenu_ButtonContainer">
-                    <a href="#" class="NavigationMenu_Button"> О сайте </a>
+                    <a href="~/News/AddNews" class="NavigationMenu_Button"> Добавить новость </a>
                 </div>
             </nav>
         </header>
