Реализовано сохранение документов новостей в текстовые файлы.
Текст из файла новостей теперь может быть преобразован в DTO объект, в котором он разбит на параграфы.

Теперь файлы новостей сохраняются в документах ПК.

Главная теперь выводит только заголовки новостей в виде ссылки на страницу просмотра новости.

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -10,8 +10,11 @@
         @foreach (var newsItem in Model)
          {
             <li class="NewsBlock_Item">
-                <span class="NewsBlock_Item__Title">@newsItem.GetNameOfNews()</span>
-                <span class="NewsBlock_Item_Content">Content</span>
+                <a href="/News/Watch?videoName=@newsItem.GetNameOfNews()"
+                   class="NewsBlock_Item__Title">
+
+                   <span class="NewsBlock_Item__Title">@newsItem.GetNameOfNews()</span>
+                </a>
             </li>
          }
     </ul>
