--- a/WebApplication1/Views/News/Watch.cshtml
+++ b/WebApplication1/Views/News/Watch.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Watch the News Page";
 }
+@using NewsSite.BL.DTOModels;
+@model DTONews_Text;
 
 <head>
     <link rel="stylesheet" href="../css/WatchStyles.css">
