--- a/WebApplication1/Views/News/Watch.cshtml
+++ b/WebApplication1/Views/News/Watch.cshtml
@@ -9,22 +9,12 @@
 </head>
 <div class="NewsContainer">
     <div class="NewsContainer_TitleContainer">
-        <h2 class="NewsContainer__Title"> Заголовок новости </h2>
+        <h1 class="NewsContainer__Title"> @Model.Title </h1>
     </div>
-
-    <div class="NewsContainer_Paragraph">
-        <h4 class="NewsContainer_Paragraph__Title"> Заголовок параграфа </h4>
-        <p class="NewsContainer_Paragraph__Text"> Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Ullam suscipit, labore numquam ea iusto in sed ut id dignissimos deserunt saepe autem corrupti distinctio, voluptates, quia hic quas doloribus, dolorum? </p>
-    </div>
-    <div class="NewsContainer_Paragraph">
-        <h4 class="NewsContainer_Paragraph__Title"> Заголовок параграфа </h4>
-        <p class="NewsContainer_Paragraph__Text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aut quos sunt officiis, reprehenderit a unde harum placeat quam pariatur soluta magnam quaerat saepe iusto rem earum, alias at hic!</p>
-    </div>
-
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-
-    <div class="NewsContainer_ReferenceContainer">
-        <a href="#" class="NewsContainer__Reference"> Ссылка на источник </a>
-        <a href="#" class="NewsContainer__Reference"> Ссылка на источник </a>
-    </div>
+    @foreach (var paragraph in Model.Paragraphs)
+    {
+        <div class="NewsContainer_Paragraph">
+            <p class="NewsContainer_Paragraph__Text"> @paragraph </p>
+        </div>
+    }
 </div>
