--- a/WebApplication1/wwwroot/css/WatchStyles.css
+++ b/WebApplication1/wwwroot/css/WatchStyles.css
@@ -1,5 +1,10 @@
 @import "../css/NullStyle.css";
+body {
+  font-family: ms sans serif;
+}
+
 header {
+  padding: 10px 0px 20px 0px;
   min-height: 70px;
   min-width: 100%;
 }
@@ -7,19 +12,25 @@ header .Title_Container {
   display: flex;
   justify-content: center;
 }
+header .Title_Container .Title_Container_Title {
+  font-size: 40px;
+  font-family: Bahnschrift;
+}
 header .NavigationMenu {
   display: flex;
   justify-content: center;
   min-width: 100%;
-  border-bottom: solid 1px black;
-  border-top: solid 1px black;
-  background-color: #C0C0C0;
+  background-color: #CDCBCB;
+}
+header .NavigationMenu .NavigationMenu_ButtonContainer {
+  margin: 0 5px;
+  border-left: solid 2px black;
+  border-right: solid 2px black;
 }
 header .NavigationMenu .NavigationMenu_ButtonContainer .NavigationMenu_Button {
-  font-size: 100%;
   text-decoration: none;
   color: black;
-  margin: 0px 7px;
+  margin: 0px 5px;
 }
 
 .LayoutBody {
@@ -48,52 +59,49 @@ header .NavigationMenu .NavigationMenu_ButtonContainer .NavigationMenu_Button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 10px 0px;
-  flex-grow: 1;
+  background-color: #CDCBCB;
+  margin: 10px 0px;
+  padding: 5px 0px;
+}
+.LayoutBody .MainContentContainer .NewsBlock_Container .NewsBlock .NewsBlock_Item .NewsBlock_Item__Ref {
+  display: flex;
+  justify-content: center;
+}
+.LayoutBody .MainContentContainer .NewsBlock_Container .NewsBlock .NewsBlock_Item .NewsBlock_Item__Ref .NewsBlock_Item__Ref__Title {
+  color: black;
+  font-size: 40px;
 }
 
 footer {
   min-height: 10%;
   border-top: solid 0.5px black;
   font-size: 20px;
-  background-color: #C0C0C0;
+  background-color: #CDCBCB;
 }
 
 .NewsContainer {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  max-width: 80%;
-  top: 0;
-  left: 0;
+  max-width: 90%;
   align-items: center;
-  align-content: center;
   justify-content: center;
 }
 .NewsContainer .NewsContainer_Paragraph {
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-content: center;
-  justify-content: center;
   margin: 10px 0px 20px;
 }
 .NewsContainer .NewsContainer_Paragraph .NewsContainer_Paragraph__Title {
   font-size: 40px;
-  margin: 0px 0px 20px;
+  margin: 0px 0px 10px;
 }
 .NewsContainer .NewsContainer_Paragraph .NewsContainer_Paragraph__Text {
   display: block;
 }
-.NewsContainer .NewsContainer_ReferenceContainer {
-  display: flex;
-  flex-direction: column;
-}
-.NewsContainer .NewsContainer_ReferenceContainer .NewsContainer__Reference {
-  display: block;
-}
 
 .NewsContainer_TitleContainer {
-  font-size: 55px;
-  margin: 20px 0px 50px;
+  font-size: 50px;
+  margin: 0px 0px 30px;
 }
