--- a/WebApplication1/wwwroot/css/DefaultStyles.css
+++ b/WebApplication1/wwwroot/css/DefaultStyles.css
@@ -13,14 +13,15 @@ header .Title_Container {
   justify-content: center;
 }
 header .Title_Container .Title_Container_Title {
-  font-size: 40px;
+  font-size: 35px;
   font-family: Bahnschrift;
+  color: black;
 }
 header .NavigationMenu {
   display: flex;
   justify-content: space-around;
   background-color: #cccccc;
-  box-shadow: 0 7px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 12px 10px rgba(0, 0, 0, 0.18);
 }
 header .NavigationMenu :hover {
   background-color: #b3b3b3;
