--- a/WebApplication1/wwwroot/scss/AddNewsStyles.scss
+++ b/WebApplication1/wwwroot/scss/AddNewsStyles.scss
@@ -1,4 +1,34 @@
 ﻿@import "../css/DefaultStyles.css";
 @import "../css/RegistrationStyles.css";
 
+$ButtonColor: rgb(80%, 80%, 80%);
 
+.MainContentContainer{
+	.FormContainer{
+		.Form{
+			.Form_ButtonContainer{
+				.InputFile__PreText{
+					padding-right: 15px; 
+					font-size: 28px;
+				}
+				.InputText{
+					border: solid 1.5px;
+					font-size: 20px;
+				}
+				.InputFile{
+					display: none;
+				}
+				.InputFile_Lable{
+					padding: 10px;
+					background-color: #9D9D9D;
+					border: solid 2px black;
+				}
+			}
+			.Form_ButtonContainer_ButtonContainer{
+				font-size: 35px;
+				background-color: rgb(80%, 80%, 80%);
+				padding: 5px;
+			}
+		}
+	}
+}
