--- a/NewsSite.BlazorUI/Shared/MainLayout.razor
+++ b/NewsSite.BlazorUI/Shared/MainLayout.razor
@@ -1,17 +1,24 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+<link rel="stylesheet" href="../css/DefaultStyles.css">
+<header>
+    <div class="Title_Container">
+        <a href="IndexModel.html" class="Title_Container_Title">The NewsSite</a>
     </div>
-
-    <div class="main">
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+    <nav class="NavigationMenu">
+        <div class="NavigationMenu_ButtonContainer">
+            <a href="RegistrationModel.html" class="NavigationMenu_Button"> Регистрация </a>
         </div>
-
-        <div class="content px-4">
-            @Body
+        <div class="NavigationMenu_ButtonContainer">
+            <a href="AddNewsModel.html" class="NavigationMenu_Button"> Добавить новость </a>
         </div>
-    </div>
-</div>
+    </nav>
+</header>
+<main role="main" class="main">
+    @Body
+</main>
+
+<footer>
+    <span>Site by Ulyanov Ivan.</span>
+    <a href="https://github.com/Ulyanov-programmer">GitHub</a>
+</footer>
