--- a/NewsSite.BlazorUI/_Imports.razor
+++ b/NewsSite.BlazorUI/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using NewsSite.BlazorUI
 @using NewsSite.BlazorUI.Shared
+@using NewsSite.BL.DTOModels
+@using NewsSite.BlazorUI.Data
