--- a/NewsSite.BlazorUI/wwwroot/scss/DefaultStyles.scss
+++ b/NewsSite.BlazorUI/wwwroot/scss/DefaultStyles.scss
@@ -8,10 +8,20 @@ $ActiveBackColor: rgb(70%, 70%, 70%);
 
 body{
 	font-family: arial;
+	
+	display: flex;
+	flex-direction: column;
+
+	background-color: $BackColor;
+
+	font-size: 30px;
+
+	min-height: 100vh;
 }
 
 header{
-	padding: 10px 0px 20px 0px;
+	padding-top: 5px;
+	margin-bottom: 20px;
 	min-height: 70px;
 	min-width: 100%;
 
@@ -49,7 +59,8 @@ header{
 	}
 }
 
-.LayoutBody {
+
+.MainContentContainer{
 	display: flex;
 	flex-direction: column;
 
@@ -58,53 +69,51 @@ header{
 	font-size: 30px;
 
 	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 
-	.MainContentContainer{
+	flex-grow: 1;
+
+	.NewsBlock_Container{
 		display: flex;
-		flex-direction: column;
+		justify-content: center;
 
-		flex-grow: 1;
+		min-width: 100%;
 
-		.NewsBlock_Container{
+		.NewsBlock{
 			display: flex;
-			justify-content: center;
+			flex-direction: column;
 
-			min-width: 100%;
+			min-width: 96%;
+			:hover{
+				box-shadow: 0 0 30px rgba(0,0,0,0.5);
+			}
+			.NewsBlock_Item{
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					
+					background-color: $SecondBackColor;
 
-			.NewsBlock{
-				display: flex;
-				flex-direction: column;
+					margin: 10px 0px;
+					padding: 7px 0px;
 
-				min-width: 96%;
-				:hover{
-					box-shadow: 0 0 30px rgba(0,0,0,0.5);
-				}
-				.NewsBlock_Item{
+					:hover{
+						box-shadow: 0 0 0px rgba(0,0,0,0);
+					}
+					.NewsBlock_Item__Ref{
 						display: flex;
-						flex-direction: column;
 						justify-content: center;
-						
-						background-color: $SecondBackColor;
 
-						margin: 10px 0px;
-						padding: 7px 0px;
-
-						:hover{
-							box-shadow: 0 0 0px rgba(0,0,0,0);
-						}
-						.NewsBlock_Item__Ref{
-							display: flex;
-							justify-content: center;
-
-							.NewsBlock_Item__Ref__Title{
-								color: $TextColor;
-							}
+						.NewsBlock_Item__Ref__Title{
+							color: $TextColor;
 						}
 					}
-			}
+				}
 		}
 	}
 }
+
 
 footer{
 	min-height: 7%;
